@@ -51,6 +51,7 @@ int main(int argc, char *argv[])
     argList::addBoolOption("steady", "to run steady flow simulation");
 ;
     #include "setRootCase.H"
+    #include "../headerPMF.H"
     bool steady = args.found("steady");
     #include "createTime.H"
     #include "createMesh.H"
